feature(customer-characteristics):feature/OBM-2820 add Customer patch API + persistence. Basic implementation done.
