# src/main/java/com/icthh/xm/tmf/ms/customer/domain/CustomerCharacteristicEntity.java
@@ -1,0 +1,35 @@
+package com.icthh.xm.tmf.ms.customer.domain;
+
+import static javax.persistence.GenerationType.SEQUENCE;
+
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.Id;
+import javax.persistence.Table;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@Entity
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+@Table(name = "customer_characteristic")
+public class CustomerCharacteristicEntity {
+
+    @Id
+    @GeneratedValue(strategy = SEQUENCE)
+    private Long id;
+
+    @Column(name = "customer_id")
+    private String customerId;
+
+    @Column
+    private String key;
+
+    @Column
+    private String value;
+}
